Se corrigió mensaje de error al eliminar requisito.

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,4 @@ InlabPDF/build/classes/.netbeans_update_resources
 InlabPDF/build/classes/com/pdfbox/IControladorPDF.class
 InlabPDF/dist/InlabPDF.jar
 InlabPDF/dist/InlabPDF.jar
+iNLab-Frontend/build/web/WEB-INF/classes/web/destinos/ListaDeDestinos.class
