--- a/iNLab-Frontend/nbproject/project.properties
+++ b/iNLab-Frontend/nbproject/project.properties
@@ -68,7 +68,7 @@ javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
-platform.active=JDK_1.8
+platform.active=default_platform
 project.InlabBE=../InlabBE
 project.InlabBE-REV=../InlabBE-REV
 project.InlabPDF=../InlabPDF
